Fixed the horizontal scroll bar

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -21,7 +21,6 @@
 /*header section*/
 
 @keyframes changeBackground {
-
   0%,
   100% {
     background-image: url("../imgs/photos/coffee-background.jpeg");
@@ -162,9 +161,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(180deg,
+  background: linear-gradient(
+      180deg,
       rgba(186, 211, 238, 0.9) 30%,
-      rgba(0, 101, 124, 1) 100%),
+      rgba(0, 101, 124, 1) 100%
+    ),
     url(../imgs/photos/aboutus/pictureofmap.png), no-repeat;
 }
 
@@ -360,13 +361,13 @@
   text-align: center;
 }
 
-.wotmBanner>p {
+.wotmBanner > p {
   font-family: "Caveat";
   font-size: 2.5rem;
   font-weight: 100;
 }
 
-.wotmBanner>a {
+.wotmBanner > a {
   font-size: 1.5rem;
   color: #00657c;
   background-color: #fefbf4;
@@ -405,7 +406,7 @@ img.wotmCoffee {
   filter: drop-shadow(1.875rem 0.625rem 1.875rem #69686873);
 }
 
-.wotmFood>p {
+.wotmFood > p {
   margin-bottom: 2.5rem;
 }
 
@@ -429,7 +430,7 @@ img.wotmCoffee {
   grid-template-rows: repeat(5, 1fr);
 }
 
-.wotmBackground>img {
+.wotmBackground > img {
   opacity: 0.13;
   max-width: 10rem;
 }
@@ -509,7 +510,7 @@ hr {
   z-index: 1;
   top: 14vh;
   left: 10vw;
-  width: 100vw;
+  width: 100%;
   position: sticky;
   overflow: scroll;
 }
@@ -661,7 +662,6 @@ hr {
 }
 
 @media (max-width: 1200px) {
-
   /*Menu Section Styling Responsivness*/
   .menuTrendingOrders {
     grid-template-columns: repeat(2, 1fr);
@@ -673,11 +673,11 @@ hr {
   }
 
   /*WOTM STYLING: Fixing sizes*/
-  .wotmBanner>p {
+  .wotmBanner > p {
     font-size: 1.7rem;
   }
 
-  .wotmBanner>a {
+  .wotmBanner > a {
     font-size: 1rem;
     margin: 0 0 0 3rem;
   }
@@ -743,7 +743,6 @@ hr {
 }
 
 @media (max-width: 800px) {
-
   body,
   html {
     width: 100vw;
@@ -847,11 +846,11 @@ hr {
     height: 6rem;
   }
 
-  .wotmBanner>p {
+  .wotmBanner > p {
     font-size: 1.5rem;
   }
 
-  .wotmBanner>a {
+  .wotmBanner > a {
     font-size: 0.8rem;
     margin: 0 0 0 2rem;
   }
@@ -919,7 +918,6 @@ hr {
 }
 
 @media (max-width: 430px) {
-
   /*Header Styling Responsivness*/
   .scrollDownText {
     font-size: 0.675rem;
@@ -950,7 +948,7 @@ hr {
     padding: 7vh 12vw 9vh;
   }
 
-  .wotmFood>p {
+  .wotmFood > p {
     margin-bottom: 1rem;
   }
 
@@ -959,12 +957,12 @@ hr {
     flex-wrap: wrap;
   }
 
-  .wotmBanner>p {
+  .wotmBanner > p {
     font-size: 1rem;
     margin-top: 1rem;
   }
 
-  .wotmBanner>a {
+  .wotmBanner > a {
     font-size: 0.8rem;
     margin: 0 0 1rem;
   }
